<resources>
    <string name="app_name">huiospay_application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_continue">Continue</string>
<string name="msg_hi_there_thank">Hi there. Thank you for choosing
HuiosPay. How may we be of service?</string>
<string name="lbl_cash_transfer">Cash Transfer</string>
<string name="msg_1133557799_fi">1133557799 - Fidelity</string>
<string name="lbl_business_name">Business Name</string>
<string name="msg_button_you_a">" button, you agree
to </string>
<string name="lbl_description">Description</string>
<string name="lbl_customer_name">Customer Name</string>
<string name="lbl_samsung_s8">Samsung S8
</string>
<string name="lbl_phone_number">Phone Number</string>
<string name="msg_use_email_addre">Use email address instead</string>
<string name="msg_how_to_get_our">How to get our POS terminals</string>
<string name="lbl_huiospay">HuiosPay</string>
<string name="lbl_log_out">Log Out</string>
<string name="lbl_declined">Declined</string>
<string name="msg_business_phone">Business Phone Number</string>
<string name="lbl_call_us">Call us</string>
<string name="lbl_n_5_000_002">N 5,000.00</string>
<string name="lbl_paid_from">Paid from?</string>
<string name="lbl_airtime_data2">Airtime &amp; Data</string>
<string name="lbl_data">Data</string>
<string name="lbl_to">to </string>
<string name="msg_add_to_benefi">+ Add to Beneficiary</string>
<string name="msg_please_input_th">Please input the </string>
<string name="msg_select_if_the_s">Select if the services needed is listed below</string>
<string name="lbl_profile_image">Profile Image</string>
<string name="msg_welcome_back_st">Welcome Back
Stanley Dafe</string>
<string name="lbl_betting_id_no">Betting ID No.</string>
<string name="lbl_pos_dispute">POS Dispute</string>
<string name="msg_airtime_to_mtn">Airtime to MTN-0811223344</string>
<string name="msg_please_enter_yo">Please enter your 11-digit Bank Verification No,
and date of birth attached to it.</string>
<string name="lbl_n0_00">N0.00</string>
<string name="lbl_by_clicking">By clicking </string>
<string name="lbl_quick_actions">Quick Actions</string>
<string name="lbl_bills">Bills</string>
<string name="lbl_payer_s_name3">Payer\u2019s name</string>
<string name="lbl_payer_s_name2">Payer\u2019s name? </string>
<string name="lbl_n_5_010_25">N 5,010.25</string>
<string name="lbl_password">Password</string>
<string name="lbl_bright_cyph">BRIGHT CYPH</string>
<string name="msg_2233445566_gt">2233445566 - GTBank</string>
<string name="msg_transfer_to_daf">Transfer to Dafe Stanley</string>
<string name="msg_enter_receipien2">"Enter Receipient's Phone Number"</string>
<string name="lbl_select_network">Select Network</string>
<string name="msg_enter_betting">Enter Betting  ID</string>
<string name="lbl_2dys_ago">2dys ago</string>
<string name="lbl_data_from">Data from?</string>
<string name="msg_please_enter_th">Please enter the 4-digit OTP that
has been sent to you</string>
<string name="lbl_dial">Dial </string>
<string name="msg_data_subscripti">Data Subscription - MTN1500</string>
<string name="lbl_pos_terminals">POS Terminals</string>
<string name="msg_all_transaction">All Transactions</string>
<string name="msg_credit_transf">Credit - Transfer from Dafe...</string>
<string name="msg_pos_phone_pay">POS - Phone Pay; Geostore...</string>
<string name="lbl_input_new_pin">Input new PIN</string>
<string name="lbl_sportybet">Sportybet</string>
<string name="lbl_credit">Credit</string>
<string name="lbl_zenith_bank">Zenith Bank</string>
<string name="lbl_active2">Active
</string>
<string name="lbl_account_number">Account Number</string>
<string name="msg_business_inform">Business Information</string>
<string name="msg_business_catego">Business Category</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="lbl_proceed">Proceed</string>
<string name="lbl_privacy_policy">Privacy Policy</string>
<string name="lbl_withdrawal">Withdrawal</string>
<string name="lbl_phone_pay">Phone Pay</string>
<string name="lbl_bill_payment">Bill Payment</string>
<string name="lbl_own_your_weird">OWN YOUR WEIRD</string>
<string name="msg_total_transfer">Total Transfer Amount</string>
<string name="lbl_purpose3">Purpose?</string>
<string name="lbl_done">Done</string>
<string name="lbl_purpose2">Purpose? </string>
<string name="msg_hi_there_thank2">Hi there. Thank you for c</string>
<string name="lbl_chat_with_us">Chat with us</string>
<string name="lbl_account_opening">Account Opening</string>
<string name="msg_verify_transact">Verify Transaction</string>
<string name="msg_dstv_dstv_com">DSTV - DSTV Compact</string>
<string name="lbl_utilities">Utilities</string>
<string name="lbl_n_5_010_75">N 5,010.75</string>
<string name="msg_info_huiospay_c">info@huiospay.com</string>
<string name="lbl_serial_number">Serial Number</string>
<string name="msg_you_agree_to">, you agree to our </string>
<string name="lbl_security">Security</string>
<string name="msg_by_clicking_sub">By clicking Submit, you agree to our Terms and
Conditions and Privacy Policy</string>
<string name="msg_payer_s_phone_n2">Payer\u2019s phone number </string>
<string name="lbl_pay">Pay</string>
<string name="lbl_n_0_002">N 0.00</string>
<string name="lbl_dstv">DSTV</string>
<string name="lbl_settings">Settings</string>
<string name="msg_brief_descripti">Brief Description</string>
<string name="lbl_new_dispute">+ New Dispute</string>
<string name="lbl_account_holder">Account Holder</string>
<string name="msg_linked_to_your"> linked to your BVN</string>
<string name="msg_proof_of_person">Proof of Personal Address include Utility Bills, Sworn Affidavit,
Govt. Issued document, Bank statement.</string>
<string name="msg_acct_no_001122">Acct No: 0011223344</string>
<string name="msg_print_merchant">Print Merchant Copy</string>
<string name="lbl_send_to">Send To</string>
<string name="msg_input_pin_for_t">Input PIN for transaction</string>
<string name="lbl_back">Back</string>
<string name="lbl_airtime_from">Airtime from?</string>
<string name="lbl_airtime_data">Airtime/Data</string>
<string name="lbl_transactions">Transactions</string>
<string name="msg_input_your_emai">Input your email address for a link to reset your password</string>
<string name="lbl2">&lt;</string>
<string name="lbl3">*</string>
<string name="lbl_first_name">First Name</string>
<string name="lbl_welcome_back2">Welcome Back
</string>
<string name="msg_receipt_configu">Receipt COnfiguration</string>
<string name="msg_how_much_would">How much would you like to send?</string>
<string name="msg_change_terminal">Change Terminal PIN</string>
<string name="msg_kyc_account_ver">KYC/Account Verification</string>
<string name="lbl_bank_name">Bank Name</string>
<string name="lbl_landmark">Landmark</string>
<string name="lbl_dstv_cable">DSTV Cable</string>
<string name="lbl_select_biller">Select Biller</string>
<string name="lbl_n10_800_00">N10,800.00</string>
<string name="msg_provide_your_em">Provide your email address and phone number</string>
<string name="msg_forgot_password">Forgot password?</string>
<string name="msg_send_us_an_emai">Send us an email</string>
<string name="lbl_bill_payments">Bill Payments</string>
<string name="lbl_support">Support</string>
<string name="lbl_old_password">Old Password</string>
<string name="msg_betting_lotte">Betting &amp; Lottery</string>
<string name="lbl_select_category">Select Category</string>
<string name="lbl_0_50">0/50</string>
<string name="lbl_n25_000_00">N25,000.00</string>
<string name="lbl_summary">Summary</string>
<string name="msg_airtime_data">Airtime, Data, Bill Payments, etc.</string>
<string name="msg_terminal_receip">Terminal Receipt Configuration</string>
<string name="lbl_pending">Pending</string>
<string name="msg_already_have_an2">Already have an account? </string>
<string name="msg_getting_started">Getting started with Huiospay</string>
<string name="lbl_transfers">Transfers</string>
<string name="msg_select_benefici">Select Beneficiary</string>
<string name="msg_select_data_pac">Select Data Package</string>
<string name="lbl_active">Active</string>
<string name="lbl_service">service?</string>
<string name="msg_select_package">Select Package/Product</string>
<string name="msg_mtn_081600112">MTN - 08160011223</string>
<string name="lbl_language">Language</string>
<string name="msg_request_pos_ter">Request POS terminal</string>
<string name="msg_zenith_bank_0">Zenith Bank - 0011223344</string>
<string name="lbl_p260300622735">P260300622735
</string>
<string name="lbl_business_type">Business Type</string>
<string name="lbl_next_of_kin">Next of Kin</string>
<string name="msg_please_input_se">Please input serial number for device registered</string>
<string name="msg_withdrawal_auth">Withdrawal Authentication PIN</string>
<string name="msg_proof_of_identi2">Proof of Identity include valid Voter\u2019s Card, NIN or International Passport</string>
<string name="lbl_create_account">Create
Account</string>
<string name="msg_please_enter_th2">Please enter the 4-digit OTP that has been sent
to your email address and/or phone number</string>
<string name="lbl_cable_tv">Cable &amp; TV</string>
<string name="msg_phone_pay_trs2">Phone Pay - TRSCTN754034...</string>
<string name="msg_phone_pay_trs4">Phone Pay - TRSCTN008321...</string>
<string name="msg_phone_pay_trs3">Phone Pay - TRSCTN209836...</string>
<string name="lbl_devices">Devices</string>
<string name="msg_welcome_to_huio">Welcome to HuiosPay
Stanley Dafe</string>
<string name="lbl_and"> and </string>
<string name="lbl">!</string>
<string name="msg_forgotten_passw">Forgotten Password</string>
<string name="msg_transfer_to_bri">Transfer to Bright Cyph</string>
<string name="msg_pay_ngn_5_010_2">Pay NGN 5,010.25</string>
<string name="msg_phone_pay_trs">Phone Pay - TRSCTN135468...</string>
<string name="msg_enable_receipt">Enable Receipt Reprint</string>
<string name="lbl_0_11">0/11</string>
<string name="lbl_card_dispute">Card Dispute</string>
<string name="lbl_0">0</string>
<string name="lbl_1">1</string>
<string name="lbl_2">2</string>
<string name="lbl_0_10">0/10</string>
<string name="lbl_3">3</string>
<string name="lbl_4">4</string>
<string name="lbl_5">5</string>
<string name="lbl_6">6</string>
<string name="lbl_7">7</string>
<string name="lbl_8">8</string>
<string name="lbl_resolve_dispute">Resolve Dispute</string>
<string name="msg_proof_of_identi">Proof of Identity</string>
<string name="lbl_9">9</string>
<string name="lbl_faqs">FAQs</string>
<string name="lbl_34902345819">34902345819</string>
<string name="msg_type_message_he">Type message here</string>
<string name="lbl_login">Login</string>
<string name="msg_how_much_airtim">How much airtime would you like to purchase?</string>
<string name="lbl_insured">Insured</string>
<string name="msg_didn_t_receive2">Didn\u2019t receive an OTP? </string>
<string name="lbl_payer_s_name">Payer\u2019s name? *</string>
<string name="msg_please_upload_p">Please upload proof of identity, personal address
and business address</string>
<string name="msg_mtn_monthly_12g">MTN Monthly 12GB</string>
<string name="lbl_all">All</string>
<string name="msg_input_your_pers">Input your personal information to proceed</string>
<string name="lbl_login_with_otp">Login with OTP</string>
<string name="msg_last_login_5_j">Last Login: 5 Jun. 2023 - 11:23AM</string>
<string name="lbl_manufacturer">Manufacturer: </string>
<string name="lbl_email_address">Email Address</string>
<string name="msg_02_12_2022_at_3">02/12/2022 at 3:47PM</string>
<string name="msg_use_phone_numbe">Use phone number instead</string>
<string name="lbl_next">Next</string>
<string name="lbl_successful">Successful</string>
<string name="msg_already_have_an">Already have an account? Login</string>
<string name="lbl_reset">Reset</string>
<string name="msg_input_device_se">Input Device
Serial Number</string>
</resources>