<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUpTwoVM" type="com.huiospayapplication.app.modules.signuptwo.data.viewmodel.SignUpTwoVM"/>
    </data>
    <LinearLayout android:id="@+id/linearSIgnUpTwo"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end" android:id="@+id/txtBack"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signUpTwoVM.signUpTwoModel.txtBack}"
            style="@style/txtWorkSanssemibold12" tools:text="@string/lbl_back"/>
        <ImageView android:id="@+id/imageGroupTwentyEight"
            android:layout_gravity="end"
            android:layout_height="@dimen/_275pxh"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="@dimen/_304pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_group28"
            tools:ignore="ContentDescription" tools:src="@drawable/img_group28"/>
        <TextView android:id="@+id/txtCreateAccount"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_34pxh"
            android:layout_marginStart="@dimen/_34pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="wrap_content"
            android:text="@{signUpTwoVM.signUpTwoModel.txtCreateAccount}"
            style="@style/txtWorkSanssemibold36" tools:text="@string/lbl_create_account"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtProvideyourem"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_34pxh"
            android:layout_marginStart="@dimen/_34pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{signUpTwoVM.signUpTwoModel.txtProvideyourem}"
            style="@style/txtWorkSansregular12" tools:text="@string/msg_provide_your_em"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_400_radius_24"
            android:ellipsize="end"
            android:hint="@string/lbl_email_address"
            android:id="@+id/etGroupFour"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_21pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@={signUpTwoVM.signUpTwoModel.etGroupFourValue}"
            android:textColorHint="@color/gray_500"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.SearchView
            android:background="@drawable/rectangle_bg_white_a700_border_gray_400_radius_24"
            android:gravity="center_horizontal"
            android:id="@+id/searchViewGroupEleven"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:theme="@style/searchViewGroupEleven"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/lbl_password" app:searchIcon="@drawable/img_search"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtUsephonenumbe"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signUpTwoVM.signUpTwoModel.txtUsephonenumbe}"
            style="@style/txtWorkSanssemibold12_1" tools:text="@string/msg_use_phone_numbe"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnNext"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_next" android:textAllCaps="false"
            style="@style/btnSolidRounded_1" tools:text="@string/lbl_next"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{signUpTwoVM.signUpTwoModel.txtConfirmation}"
            style="@style/txtWorkSansregular12" tools:text="@string/msg_already_have_an"/>
    </LinearLayout>
</layout>
