<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listoneRowModel" type="com.huiospayapplication.app.modules.settingssecuritychangepasswordone.data.model.ListoneRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowone"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtOne"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.25" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listoneRowModel.txtOne}"
            style="@style/txtWorkSanssemibold24_2" tools:text="@string/lbl_1"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTwo"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_94pxh"
            android:layout_weight="0.38" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listoneRowModel.txtTwo}"
            style="@style/txtWorkSanssemibold24_2" tools:text="@string/lbl_2"/>
        <TextView android:ellipsize="end" android:id="@+id/txtThree"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_94pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.38" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{listoneRowModel.txtThree}"
            style="@style/txtWorkSanssemibold24_2" tools:text="@string/lbl_3"/>
    </LinearLayout>
</layout>
