<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUpVM" type="com.huiospayapplication.app.modules.signup.data.viewmodel.SignUpVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearSIgnUp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end" android:id="@+id/txtBack"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signUpVM.signUpModel.txtBack}"
            style="@style/txtWorkSanssemibold12" tools:text="@string/lbl_back"/>
        <ImageView android:id="@+id/imageGroupTwentyOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_266pxh"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_68pxv"
            android:layout_width="@dimen/_285pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_group21_266x285"
            tools:ignore="ContentDescription" tools:src="@drawable/img_group21_266x285"/>
        <TextView android:id="@+id/txtInputDeviceSe"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_34pxh"
            android:layout_marginStart="@dimen/_34pxh"
            android:layout_marginTop="@dimen/_45pxv"
            android:layout_width="match_parent"
            android:text="@{signUpVM.signUpModel.txtInputDeviceSe}"
            style="@style/txtWorkSanssemibold36" tools:text="@string/msg_input_device_se"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtPleaseinputse"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{signUpVM.signUpModel.txtPleaseinputse}"
            style="@style/txtWorkSansregular12" tools:text="@string/msg_please_input_se"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_400_radius_24"
            android:ellipsize="end"
            android:hint="@string/lbl_serial_number"
            android:id="@+id/etGroupFive" android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_25pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@={signUpVM.signUpModel.etGroupFiveValue}"
            android:textColorHint="@color/gray_500"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnNext"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_48pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_next" android:textAllCaps="false"
            style="@style/btnSolidRounded_1" tools:text="@string/lbl_next"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{signUpVM.signUpModel.txtConfirmation}"
            style="@style/txtWorkSansregular12" tools:text="@string/msg_already_have_an"/>
    </LinearLayout>
</layout>
