<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="resetPasswordVM" type="com.huiospayapplication.app.modules.resetpassword.data.viewmodel.ResetPasswordVM"/>
    </data>
    <LinearLayout android:id="@+id/linearResetpassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end" android:id="@+id/txtBack"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{resetPasswordVM.resetPasswordModel.txtBack}"
            style="@style/txtWorkSanssemibold12" tools:text="@string/lbl_back"/>
        <ImageView android:id="@+id/imageGroupTwentySix"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_327pxh"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_46pxv"
            android:layout_width="@dimen/_278pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_group26"
            tools:ignore="ContentDescription" tools:src="@drawable/img_group26"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtForgottenPassw"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_45pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{resetPasswordVM.resetPasswordModel.txtForgottenPassw}"
            style="@style/txtWorkSanssemibold24" tools:text="@string/msg_forgotten_passw"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtInputyouremai"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{resetPasswordVM.resetPasswordModel.txtInputyouremai}"
            style="@style/txtWorkSansregular10_3" tools:text="@string/msg_input_your_emai"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_400_radius_24"
            android:ellipsize="end"
            android:hint="@string/lbl_email_address"
            android:id="@+id/etGroupFour"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_21pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@={resetPasswordVM.resetPasswordModel.etGroupFourValue}"
            android:textColorHint="@color/gray_500"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnReset"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_47pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_reset" android:textAllCaps="false"
            style="@style/btnSolidRounded_1" tools:text="@string/lbl_reset"/>
    </LinearLayout>
</layout>
