<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listmaximize5RowModel" type="com.huiospayapplication.app.modules.alltransactionsall.data.model.Listmaximize5RowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowmaximize"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageButton
            android:background="@drawable/rectangle_bg_bluegray_100_radius_15"
            android:id="@+id/btnMaximize"
            android:layout_height="@dimen/_30pxh"
            android:layout_width="@dimen/_30pxh"
            android:paddingHorizontal="@dimen/_9pxh"
            android:paddingVertical="@dimen/_9pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_maximize" tools:ignore="ContentDescription"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumntransfertobri"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_weight="0.64" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTransfertoBri"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listmaximize5RowModel.txtTransfertoBri}"
                style="@style/txtWorkSansmedium12_1" tools:text="@string/msg_transfer_to_bri"/>
            <TextView android:ellipsize="end" android:id="@+id/txtTime"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{listmaximize5RowModel.txtTime}"
                style="@style/txtWorkSansregular8_1" tools:text="@string/msg_02_12_2022_at_3"/>
        </LinearLayout>
        <LinearLayout android:gravity="end"
            android:id="@+id/linearColumnn2500000"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2pxv"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_weight="0.24" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtN2500000"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listmaximize5RowModel.txtN2500000}"
                style="@style/txtWorkSanssemibold12_3" tools:text="@string/lbl_n25_000_00"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSuccessful"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listmaximize5RowModel.txtSuccessful}"
                style="@style/txtWorkSanssemibold8" tools:text="@string/lbl_successful"/>
        </LinearLayout>
    </LinearLayout>
</layout>
